# gooddata-legacy2cloud

./: Makefile  README.md  pyproject.toml
.claude/skills/gooddata-platform2cloud-cli/: SKILL.md
.github/workflows/: bump-version.yaml  release-github.yaml  release-pypi.yaml  trigger-release.yaml
scripts/: bump_version.py
src/gooddata_legacy2cloud/dashboards/: filter_context.py
src/gooddata_legacy2cloud/mapping/: mapping_utils.py
src/gooddata_legacy2cloud/workflows/: migrate_dashboard_permissions.py  migrate_dashboards.py  migrate_insights.py  migrate_metrics.py  migrate_reports.py
tests/: test_filter_context_conversion.py
