# (C) 2026 GoodData Corporation
[project]
name = "gooddata-legacy2cloud"
version = "0.1.1"
requires-python = ">=3.14"
description = "Transfer workspace metadata from GD Legacy to GD Cloud."
readme = "README.md"
license = "MIT"
authors = [
    {name = "GoodData", email = "support@gooddata.com"}
]
keywords = [
    "gooddata",
    "analytics",
    "business",
    "intelligence",
    "cloud",
    "legacy",
    "native",
    "semantic",
    "layer",
    "sql",
    "metrics",
]
dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "tenacity==9.0.0",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "pydantic==2.12.5",
    "types-requests==2.32.4.20250809",
    "gooddata-sdk>=1.61.0",
    "attrs>=24.2.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.5",
    "pre-commit==4.4.0",
    "ty==0.0.20",
    "pytest==9.0.0",
    "pytest-mock==3.15.1",
]
release = [
    "tbump~=6.11.0",
    "tomlkit>=0.11",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["scripts"]

[project.scripts]
gooddata-legacy2cloud = "gooddata_legacy2cloud.arg_parsing.cli_commands:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.tbump.version]
current = "0.1.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'
